adding example of ApplicationScope

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,6 +8,7 @@
 
     <h1>Welcome to main page</h1>
     <h3>Hello,<span th:text="${name}"></span></h3>
+    <h4>Tryings to login:<span th:text="${loginCount}"></span></h4>
     <a href="/main?Logout">Log out</a>
 </body>
 </html>
